package ej2;

import java.util.ArrayList;

public class Chat {
        private ArrayList<Chat> mensajes;
        public Usuario destinatario;

        public Chat(Usuario destinatario) {
		this.destinatario = destinatario;
	}
}
