package ej2;

public class Mensaje {
        String contenido;
        String remitente;

        public Mensaje(String contenido, String remitente) {
		this.contenido = contenido;
		this.remitente = remitente;
	}
}
